--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "rust-jwt-example"
 version = "0.1.0"
-authors = ["Mario Zupan <mario@zupzup.org>"]
+authors = ["lansheng228 <lansheng228@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-jsonwebtoken = "=7.2"
-tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
-warp = "0.2"
-serde = {version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-thiserror = "1.0"
-chrono = "0.4"
+jsonwebtoken = "=7.2.0"
+tokio = { version = "1.22.0", features = ["macros", "sync", "rt-multi-thread", "time"] }
+warp = "0.3.3"
+serde = {version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.89"
+thiserror = "1.0.37"
+chrono = "0.4.23"
 
 [profile.dev]
 debug = 0
